# device_camera_msmf

./: CMakeLists.txt  README.md  conanfile.py
cmake/: FindWindowsSDK.cmake
doc/utql/Sensor/: MSMediaFoundationCapture.xml
src/MSMFFrameGrabber/: CMakeLists.txt  MSMFFrameGrabber.cpp  MSMFFrameGrabber.hpp
